--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ dist-ssr
 *.sw?
 
 backend/__pycache__
+backend/utils/__pycache__
+backend/models/__pycache__
+backend/routers/__pycache__
+backend/utils/__pycache__
